# xil_open_hw_23

./: .gitmodules  README.md  setup.sh  tutorial.md
benchmarks/: README.md
benchmarks/host/arm64/common/: arm-env.sh
benchmarks/host/arm64/matmul/: Makefile  README.md
benchmarks/host/arm64/matmul/02_cached/: CMakeLists.txt  Makefile
benchmarks/pulp/common/: .gitattributes  overlay-bench.h
benchmarks/pulp/common/tcl/: run_hls.tcl
benchmarks/pulp/matmul/: Makefile  README.md
benchmarks/xilinx/common/app_utils/: CMakeLists.txt  xil-bench.h
benchmarks/xilinx/common/board/: local.cfg  reboot_zcu102.sh  update_bitstream.sh  update_boardenv.sh  zcu102.sh
benchmarks/xilinx/common/tcl/: run_hls.tcl
benchmarks/xilinx/matmul/: Makefile  README.md
benchmarks/xilinx/matmul/01_x_hw/: Makefile  README.md
benchmarks/xilinx/matmul/02_x_bl/: README.md
benchmarks/xilinx/matmul/03_x_bl_pm/: README.md
benchmarks/xilinx/matmul/04_hw_loop/: Makefile
benchmarks/xilinx/matmul/04_x_loop/: README.md
benchmarks/xilinx/matmul/05_x_pm/: README.md
ex-prj-zcu102/: README.md
ex-prj-zcu102/hw/hls/: Makefile
ex-prj-zcu102/hw/hls/src/: mmult.cpp  mmult_tb.cpp
ex-prj-zcu102/hw/hls/tcl/: run_hls.tcl
ex-prj-zcu102/sw/: SW-hello-world
ex-prj-zcu102/sw/app/: Makefile  SW-xil-open-hw-23  main.c
ex-prj-zcu102/sw/libs/: Makefile
ex-prj-zcu102/sw/libs/hwpe_structs/: def_struct_hwpe_common.h  def_struct_hwpe_mmult_hw_pm_cpy.h
ex-prj-zcu102/sw/libs/libarov-target/: Makefile
ex-prj-zcu102/zcu102-images/.petalinux/: usage_statistics
hw/: README.md
(+139 files in other folders)
